@@ -29,3 +29,4 @@ ring_of_protection.shp
 greentop.shp
 orangedress.shp
 bluedress.shp
+death_scythe.shp
